--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,9 @@ pytest = "7.1.3"
 ipdb = "0.13.9"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
-Faker = "14.2.0"
-
+faker = "*"
 
 [requires]
 python_full_version = "3.8.13"
+
+[dev-packages]
